--- a/src/common/partials/_variables.scss
+++ b/src/common/partials/_variables.scss
@@ -1,6 +1,3 @@
-@import "./colors";
-@import "./text";
-
 @mixin for-sm-iphone {
   @media only screen and (max-width: 320px) { @content; }
 }
@@ -29,15 +26,19 @@
   transition: all 420ms cubic-bezier(.165,.84,.44,1);
 }
 
-@keyframes hello {
-  0% {
-    transform: translateY(-50px);
-    opacity: 0;
+@mixin hello($duration) {
+  @keyframes hello {
+    0% {
+      transform: translateY(-50px);
+      opacity: 0;
+    }
+    100% {
+      transform: translateY(0px);
+      opacity: 1;
+    }
   }
-  100% {
-    transform: translateY(0px);
-    opacity: 1;
-  }
+
+  animation: hello $duration;
 }
 
 @mixin flex-center {
