Enable absolute scss imports.

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -1,6 +1,6 @@
-@import "../../common/partials/text";
-@import "../../common/partials/colors";
-@import "../../common/partials/variables";
+@import "partials/text";
+@import "partials/colors";
+@import "partials/variables";
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700');
 
