--- a/src/components/Modals/modals.scss
+++ b/src/components/Modals/modals.scss
@@ -1,6 +1,6 @@
-@import "../../common/partials/variables";
-@import "../../common/partials/colors";
-@import "../../common/partials/text";
+@import "partials/variables";
+@import "partials/colors";
+@import "partials/text";
 
 .modal-backdrop {
   position: absolute;
