--- a/src/common/forms.scss
+++ b/src/common/forms.scss
@@ -1,6 +1,6 @@
-@import './partials/colors';
-@import './partials/variables';
-@import './partials/variables';
+@import 'partials/colors';
+@import 'partials/variables';
+@import 'partials/variables';
 
 .form-wrapper {
   width: 100%;
