--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -28,7 +28,6 @@ button, input {
   min-height: 100vh;
   display: flex;
   flex-direction: column;
-  background: #000;
 }
 
 a {
@@ -37,8 +36,14 @@ a {
 }
 
 .width-container {
-  max-width: 1100px;
+  max-width: 1238px;
   margin: 0 auto;
+}
+
+.long-ver-line {
+  height: 587px;
+  border: 1px solid #8B8B8B;
+  width: 0px;
 }
 
 input:invalid {
