--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -1,5 +1,75 @@
-@import '../../common/partials/lines';
+@import '../../common/partials/text';
+@import '../../common/partials/colors';
 
 .homepage {
-  
+  .header {
+    display: flex;
+    justify-content: space-between;
+
+    .header-left {
+      display: grid;
+      grid-template-columns: repeat(7, 105px);
+      grid-auto-rows: minmax(0, auto);
+      margin-left: 100px;
+      border-left: 2px solid $gray;
+
+      .logo {
+        margin: 15px auto;
+      }
+
+      .grid-item {
+        font-size: 15px;
+        padding: 37px 10px;
+        text-align: center;
+
+        &:last-child {
+          grid-column-start: 1;
+          grid-column-end: 5;
+          grid-row-start: 3;
+          grid-row-end: 5;
+          padding-left: 32px;
+          text-align: left;
+          max-width: 468px;
+
+          .title {
+            font-size: $font-size-title;
+            color: $gray;
+          }
+
+          .title-about {
+            font-size: $font-size-regular;
+            color: $gray;
+          }
+        }
+        &:not(:last-child) {
+          height: 390px;
+          border-left: 2px solid $gray;
+        }
+      }
+    }
+
+    .header-right {
+
+      .image {
+
+        .header-img {
+          position: relative;
+          top: 0;
+          right: 0;
+          z-index: 2;
+        }
+      }
+
+      .box {
+        max-width: 776px;
+        max-height: 312px;
+        width: 100%;
+        height: 100%;
+        background-color: $yellow;
+        position: absolute;
+        top: 420px;
+        right: 0;
+      }
+    }
+  }
 }
