--- a/src/components/common/Footer/Footer.scss
+++ b/src/components/common/Footer/Footer.scss
@@ -1,6 +1,6 @@
-@import '../../common/partials/text';
-@import '../../common/partials/colors';
-@import "../../common/partials/variables";
+@import '../../../common/partials/text';
+@import '../../../common/partials/colors';
+@import '../../../common/partials/variables';
 
 .footer {
   display: flex;
