--- a/src/common/partials/_text.scss
+++ b/src/common/partials/_text.scss
@@ -9,6 +9,7 @@ $font-size-large: 1.8rem;
 $font-size-medium: 3.2rem;
 $font-size-regular: 2.5rem;
 $font-size-small-regular: 1.6rem;
+$font-size-medium-small: 1.5rem;
 $font-size-small: 1.2rem;
 $font-size-extra-small: 1rem;
 $font-size-tiny: 0.9rem;
