--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -3,13 +3,66 @@
 @import "../../common/partials/variables";
 
 .homepage {
-      .image {
-        .header-img {
-          position: relative;
-          top: 0;
-          right: 0;
-          z-index: 2;
+
+  .header-area {
+    height: 80vh;
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 55px;
+
+    .left {
+      border-left: 2px solid $gray;
+      max-height: 595px;
+      margin-left: 138px;
+
+      .lines {
+        display: flex;
+        max-width: 500%;
+
+        .long-line {
+          height: 396px;
+          width: 0;
+          border: 1px solid $gray;
+          margin-left: 120px;
         }
+      }
+
+      .text {
+        display: flex;
+        flex-direction: column;
+        max-width: 600px;
+        padding-left: 51px;
+        padding-top: 50px;
+        color: $gray;
+
+        .header-title {
+          font-size: $font-size-title;
+          text-transform: uppercase;
+          margin-bottom: 20px;
+        }
+
+        .header-about {
+          font-size: $font-size-medium;
+          line-height: 38px;
+        }
+      }
+
+      .arrow {
+        border: solid $gray;
+        border-width: 0 3px 3px 0;
+        display: inline-block;
+        padding: 10px;
+        transform: rotate(45deg);
+        -webkit-transform: rotate(45deg);
+      }
+    }
+
+    .right {
+      .header-img {
+        position: relative;
+        top: 0;
+        right: 0;
+        z-index: 5;
       }
 
       .box {
@@ -21,7 +74,10 @@
         position: absolute;
         top: 420px;
         right: 0;
+        z-index: 0;
       }
+    }
+  }
 
   .about-us {
 
@@ -112,9 +168,10 @@
 
   .our-team {
     margin-top: 100px;
+    position: relative;
+    z-index: 5;
 
     .width-container {
-
       .content-wrapper {
         display: flex;
         border-left: 2px solid $gray;
@@ -154,7 +211,7 @@
           flex-direction: column;
           border-right: 2px solid $gray;
           padding-right: 43px;
-          margin-right: 100px;
+          margin-right: 50px;
         }
 
         .single-lawyer-reverse {
@@ -163,7 +220,7 @@
           flex-direction: column-reverse;
           border-right: 2px solid $gray;
           padding-right: 43px;
-          margin-right: 100px;
+          margin-right: 50px;
 
           img {
             margin-bottom: 25px;
@@ -174,6 +231,8 @@
     }
 
     .yellow-box {
+      position: absolute;
+      z-index: 1;
       height: 398px;
       width: 100%;
       background-color: $yellow;
@@ -203,7 +262,7 @@
                 width: 190px;
                 height: 0;
                 border: 1px solid $gray;
-                margin-bottom: 95px;
+                margin-bottom: 112px;
 
                 &:first-child {
                   margin-top: 95px;
@@ -214,25 +273,28 @@
             .tabs {
               display: flex;
               flex-direction: column;
-              margin: 93px 130px 93px 20px;
+              margin: 93px 80px 93px 20px;
 
-              .tab {
-                font-size: $font-size-small-regular;
-                font-weight: bold;
-                max-width: 150px;
-                width: 100%;
 
-                &:not(:last-child) {
-                  margin-bottom: 30px;
+                .tab {
+                  font-size: $font-size-small-regular;
+                  font-weight: bold;
+                  width: 130px;
+
+                  &:not(:last-child) {
+                    margin-bottom: 30px;
+                  }
+
+                  &.active {
+                    font-size: $font-size-regular;
+                    font-weight: normal;
+                    width: 141px;
+                  }
                 }
 
-                &.active {
-                  font-size: $font-size-regular;
-                  font-weight: normal;
-                  width: 100%;
-                  max-width: 150px;
+                .arrow {
+                  margin-left: 10px;
                 }
-              }
             }
           }
 
@@ -241,23 +303,32 @@
             margin-top: 33px;
 
             .text {
-              column-count: 1;
               max-width: 383px;
-              max-height: 410px;
               font-size: $font-size-small-regular;
               line-height: 150%;
+              margin-bottom: 35px;
             }
 
             .right-button {
               margin-left: 30px;
+
+              .text2 {
+                max-width: 400px;
+                font-size: $font-size-small-regular;
+                line-height: 150%;
+                margin-bottom: 105px;
+              }
+
+              .lines {
+                margin-bottom: 95px;
+              }
 
               .button-wrapper {
                 max-width: 400px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                width: 365px; // ?
-                margin-top: 238px;
+                width: 365px;
 
                 .button {
                   background-color: $dark-gray;
@@ -285,7 +356,7 @@
                 width: 100%;
                 height: 0px;
                 border: 1px solid $gray;
-                margin-top: 70px;
+                margin-top: 87px;
               }
             }
           }
