--- a/src/components/HomePage/HomePage.scss
+++ b/src/components/HomePage/HomePage.scss
@@ -174,6 +174,7 @@
         display: flex;
         position: relative;
         z-index: 5;
+        margin-top: 100px;
         border-left: 2px solid $gray;
         border-right: 2px solid $gray;
         padding: 0 63px;
