--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -44,7 +44,9 @@ a {
 .title {
   font-size: $font-size-title;
   margin-bottom: 50px;
+  margin-top: 100px;
   font-weight: bold;
+  text-transform: uppercase;
 }
 
 .button {
