--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -36,9 +36,9 @@ a {
 }
 
 .width-container {
-  max-width: 1200px;
+  max-width: 1400px;
   margin: 0 auto;
-  padding: 0px 10px;
+  padding: 0px 20px;
 }
 
 .title {
@@ -47,6 +47,15 @@ a {
   margin-top: 100px;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+.arrow {
+  border: solid $gray;
+  border-width: 0 3px 3px 0;
+  display: inline-block;
+  padding: 10px;
+  transform: rotate(45deg);
+  -webkit-transform: rotate(45deg);
 }
 
 .button {
