--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -1,6 +1,6 @@
-@import '../../common/partials/text';
-@import '../../common/partials/colors';
-@import "../../common/partials/variables";
+@import '../../../common/partials/text';
+@import '../../../common/partials/colors';
+@import "../../../common/partials/variables";
 
 .homepage {
 
@@ -44,15 +44,6 @@
           font-size: $font-size-medium;
           line-height: 38px;
         }
-      }
-
-      .arrow {
-        border: solid $gray;
-        border-width: 0 3px 3px 0;
-        display: inline-block;
-        padding: 10px;
-        transform: rotate(45deg);
-        -webkit-transform: rotate(45deg);
       }
     }
 
@@ -101,7 +92,6 @@
         width: 50%;
 
         .hor-line {
-          max-width: 610px;
           height: 0;
           border: 1px solid $gray;
           width: 100%;
@@ -180,7 +170,7 @@
         margin-top: 100px;
         border-left: 2px solid $gray;
         border-right: 2px solid $gray;
-        padding: 0 63px;
+        padding: 0 115px;
         font-size: $font-size-small-regular;
 
         .top {
@@ -215,7 +205,7 @@
           flex-direction: column;
           border-right: 2px solid $gray;
           padding-right: 43px;
-          margin-right: 50px;
+          margin-right: 80px;
         }
 
         .single-lawyer-reverse {
@@ -224,7 +214,7 @@
           flex-direction: column-reverse;
           border-right: 2px solid $gray;
           padding-right: 43px;
-          margin-right: 50px;
+          margin-right: 80px;
 
           img {
             margin-bottom: 25px;
@@ -250,6 +240,7 @@
 
         .top {
           display: flex;
+          justify-content: space-between;
 
           .left {
             display: flex;
@@ -283,7 +274,7 @@
                   cursor: pointer;
 
                   &:not(:last-child) {
-                    margin-bottom: 30px;
+                    margin-bottom: 40px;
                   }
 
                   &.active {
@@ -294,7 +285,7 @@
                   }
                 }
 
-                .arrow {
+                .arrow-right {
                   margin-left: 10px;
                 }
             }
@@ -308,7 +299,6 @@
               max-width: 383px;
               font-size: $font-size-small-regular;
               line-height: 150%;
-              margin-bottom: 35px;
             }
 
             .right-button {
@@ -326,11 +316,10 @@
               }
 
               .button-wrapper {
-                max-width: 400px;
                 display: flex;
                 align-items: center;
                 justify-content: space-between;
-                width: 365px;
+                width: 400px; // TODO ?
 
                 .button {
                   background-color: $dark-gray;
@@ -378,24 +367,31 @@
   }
 
   .contact {
+    .title {
+      z-index: 5;
+      position: relative;
+      padding-top: 60px;
+    }
     .width-container {
+      position: relative;
       .content-wrapper {
         display: flex;
         border-left: 2px solid $gray;
         border-right: 2px solid $gray;
+        margin-bottom: 150px;
 
         .long-line {
           height: 660px;
           width: 0;
           border: 1px solid $gray;
-          margin-left: 95px;
+          margin-left: 105px;
         }
 
         .small-line {
           height: 120px;
           width: 0;
           border: 1px solid $gray;
-          margin-left: 95px;
+          margin-left: 100px;
         }
 
         .text-lines-area {
@@ -407,7 +403,7 @@
             display: flex;
             flex-direction: column;
             margin-left: 65px;
-            margin-bottom: 95px;
+            margin-bottom: 105px;
 
             .text-item {
               max-width: 250px;
@@ -439,6 +435,15 @@
           }
         }
       }
+    }
+    .big-yellow-box {
+      max-width: 1062px;
+      max-height: 707px;
+      width: 100%;
+      height: 100%;
+      background-color: $yellow;
+      position: absolute;
+      margin-top: 215px;
     }
   }
 }
