--- a/src/components/Pages/AboutUsPage/AboutUsPage.scss
+++ b/src/components/Pages/AboutUsPage/AboutUsPage.scss
@@ -62,66 +62,78 @@
       }
     }
   }
-
-  .width-container {
-    margin-top: 115px;
-
-    .medium-line {
-      width: 475px;
-      height: 0px;
-      border: 1px solid $gray;
-      margin-bottom: 60px;
+  .content-wrapper {
+    .big-yellow-box {
+      max-width: 430px;
+      max-height: 1471px;
+      width: 100%;
+      height: 100%;
+      background-color: $yellow;
+      position: absolute;
+      z-index: 2;
     }
+    .width-container {
+      margin-top: 115px;
+      position: relative;
+      z-index: 5;
 
-    .small-line {
-      width: 120px;
-      height: 0px;
-      border: 1px solid $gray;
-      margin-bottom: 95px;
-    }
-
-    .page-about {
-      margin-left: 215px;
-      margin-bottom: 50px;
-
-      .page-title {
-        font-size: $font-size-title;
-        margin-bottom: 10px;
+      .medium-line {
+        width: 475px;
+        height: 0px;
+        border: 1px solid $gray;
+        margin-bottom: 60px;
       }
 
-      .title-about {
-        font-size: $font-size-large;
-        text-transform: uppercase;
-      }
-    }
-
-    .page-content {
-      display: flex;
-      justify-content: space-between;
-
-      .lines {
-        margin-top: 45px;
+      .small-line {
+        width: 120px;
+        height: 0px;
+        border: 1px solid $gray;
+        margin-bottom: 95px;
       }
 
-      .page-text {
-        line-height: 20px;
-        font-size: $font-size-small-regular;
-        max-width: 1000px;
+      .page-about {
+        margin-left: 215px;
+        margin-bottom: 50px;
 
-        .office-owner {
-          text-transform: uppercase;
-          font-weight: bold;
-          margin-bottom: 50px;
+        .page-title {
+          font-size: $font-size-title;
+          margin-bottom: 10px;
         }
 
-        .owner {
+        .title-about {
+          font-size: $font-size-large;
           text-transform: uppercase;
-          font-weight: bold;
-          margin-bottom: 50px;
+        }
+      }
+
+      .page-content {
+        display: flex;
+        justify-content: space-between;
+
+        .lines {
+          margin-top: 45px;
         }
 
-        .text-content:not(:last-child) {
-          margin-bottom: 30px;
+        .page-text {
+          line-height: 20px;
+          font-size: $font-size-small-regular;
+          max-width: 1000px;
+
+          .office-owner {
+            text-transform: uppercase;
+            font-weight: bold;
+            margin-bottom: 50px;
+          }
+
+          .owner {
+            text-transform: uppercase;
+            font-weight: bold;
+            margin-bottom: 50px;
+          }
+
+          .text-content:not(:last-child) {
+            margin-bottom: 30px;
+          }
         }
       }
     }
