Add header active link styling.

--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -57,6 +57,12 @@ a {
   transform: rotate(45deg);
   -webkit-transform: rotate(45deg);
   cursor: pointer;
+
+  @include hover-transition;
+  &:hover {
+    border: solid black;
+    border-width: 0 3px 3px 0;
+  }
 }
 
 .button {
