--- a/src/components/App/App.scss
+++ b/src/components/App/App.scss
@@ -41,10 +41,23 @@ a {
   padding: 0px 20px;
 }
 
+.container {
+  width: 100%;
+  height: 434px;
+  background-color: $yellow;
+}
+
 .title {
   font-size: $font-size-title;
   margin-bottom: 50px;
   margin-top: 100px;
+  font-weight: bold;
+  text-transform: uppercase;
+}
+
+.gray-title {
+  font-size: $font-size-title;
+  margin-bottom: 50px;
   font-weight: bold;
   text-transform: uppercase;
 }
