--- a/src/components/Pages/AreasPage/AreasPage.scss
+++ b/src/components/Pages/AreasPage/AreasPage.scss
@@ -1,3 +1,116 @@
+@import "partials/text";
+@import "partials/colors";
+@import "partials/variables";
+
 .areas {
-  
+  .container {
+    display: flex;
+    align-items: flex-end;
+    .width-container {
+      width: 100%;
+    }
+  }
+
+  .width-container {
+    .content-wrapper {
+      display: flex;
+      justify-content: space-between;
+      padding-top: 35px;
+      border-top: 2px solid $gray;
+      margin-top: 55px;
+
+      .section-title {
+        text-transform: uppercase;
+        font-weight: bold;
+        font-size: $font-size-small-regular;
+        margin-bottom: 10px;
+      }
+
+      .section-about {
+        line-height: 150%;
+        font-size: $font-size-small-regular;
+      }
+
+      .left {
+        display: flex;
+        flex-direction: column;
+
+        .top {
+          display: flex;
+
+          .lines {
+            display: flex;
+            flex-direction: column;
+            padding-top: 75px;
+
+            .small-line {
+              width: 30px;
+              height: 0px;
+              border: 1px solid $gray;
+              margin-bottom: 100px;
+            }
+          }
+
+          .links {
+            display: flex;
+            flex-direction: column;
+
+            .link {
+              margin-bottom: 35px;
+              font-size: $font-size-small-regular;
+              font-weight: bold;
+              cursor: pointer;
+              margin-left: 32px;
+
+              @include hover-transition;
+
+              &.active {
+                font-size: $font-size-regular;
+                font-weight: normal;
+              }
+            }
+            .arrow-right {
+              margin-left: 20px;
+            }
+          }
+        }
+
+        .bottom {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+
+          .medium-line {
+            width: 396px;
+            height: 0px;
+            border: 1px solid $gray;
+            margin-top: 100px;
+
+            &:first-child {
+              margin-top: 0;
+            }
+          }
+        }
+      }
+
+      .right {
+        display: flex;
+        flex-direction: column;
+
+        .right-title {
+          text-transform: uppercase;
+          font-size: $font-size-medium - 0.2;
+          font-weight: bold;
+          margin-bottom: 38px;
+        }
+
+        .section {
+          max-width: 820px;
+          max-height: 192px;
+          margin-bottom: 55px;
+          height: 100%;
+        }
+      }
+    }
+  }
 }
