--- a/src/components/Map/MapView.scss
+++ b/src/components/Map/MapView.scss
@@ -1,4 +1,18 @@
-.map {
-  width: 500px;
-  height: 400px;
+.leaf-map-wrapper {
+  // position: relative;
+  // width: 100%;
+  // height: 500px;
+
+  .leaflet-map-pane {
+       z-index: 2 !important;
+    }
+
+    .leaflet-google-layer {
+        z-index: 1 !important;
+    }
+
+  .leaflet-container {
+    width: 100%;
+    height: 100%;
+  }
 }
