--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -1,3 +1,30 @@
-.lawyer-page {
+@import "partials/text";
+@import "partials/colors";
+@import "partials/variables";
 
+.lawyer-page {
+  .width-container {
+    width: 100%;
+    margin-bottom: 30px;
+  }
+
+  .width-container {
+    .lawyers-container {
+      .single-lawyer {
+        display: flex;
+
+        .small-lines {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          
+          .line {
+            width: 43px;
+            height: 0;
+            border: 1px solid $gray;
+          }
+        }
+      }
+    }
+  }
 }
