--- a/src/components/Pages/LawyerPage/LawyerPage.scss
+++ b/src/components/Pages/LawyerPage/LawyerPage.scss
@@ -22,6 +22,10 @@
       border-top: 2px solid $gray;
       margin-top: 50px;
 
+      &.around {
+        justify-content: space-around;
+      }
+
       .single-lawyer {
         display: flex;
         margin-top: 50px;
