--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -2,6 +2,15 @@
 @import "partials/colors";
 @import "partials/variables";
 
+@keyframes small-grow {
+  from {
+    height: 0;
+  }
+  to {
+    height: 48px;
+  }
+}
+
 .header {
   .content-wrapper {
 
@@ -72,11 +81,13 @@
         margin: 0 100px;
       }
 
+
       .small-line {
-        height: 48px;
+        height: 0px;
         width: 0;
         border: 1px solid $gray;
-
+        animation: small-grow ease-in 0.5s;
+        animation-fill-mode: forwards;
       }
     }
   }
