--- a/src/common/partials/_variables.scss
+++ b/src/common/partials/_variables.scss
@@ -22,6 +22,10 @@
   @media only screen and (max-width: 768px) { @content; }
 }
 
+@mixin mobile-break {
+  @media only screen and (max-width: 650px) {@content; } 
+}
+
 @mixin hover-transition {
   transition: all 420ms cubic-bezier(.165,.84,.44,1);
 }
