--- a/src/components/Pages/HomePage/HomePage.scss
+++ b/src/components/Pages/HomePage/HomePage.scss
@@ -38,6 +38,8 @@
         padding-left: 51px;
         padding-top: 50px;
         color: $gray;
+        position: relative;
+        z-index: 5;
 
         .header-title {
           font-size: $font-size-title;
@@ -460,6 +462,444 @@
       background-color: $yellow;
       position: absolute;
       margin-top: 215px;
+    }
+  }
+}
+
+
+
+
+
+
+
+@media only screen and (max-width:1449px) {
+  .homepage {
+      .header-area {
+        .right {
+          .header-image {
+            max-height: 630px;
+            max-width: 550px;
+          }
+
+          .box {
+            width: 700px;
+            height: 300px;
+          }
+        }
+      }
+    }
+  }
+
+  @media only screen and (max-width:1320px) {
+    .homepage {
+      .width-container {
+        .title {
+          font-size: $font-size-title-home-page;
+        }
+      }
+        .header-area {
+          .left {
+            max-height: 550px;
+            .lines {
+              .long-line {
+                margin-left: 100px;
+              }
+            }
+            .text {
+              padding-top: 30px;
+              .header-title {
+                font-size: $font-size-title-home-page;
+                margin-bottom: 18px;
+              }
+
+              .header-about {
+                font-size: $font-size-medium - 0.4;
+              }
+            }
+          }
+
+          .right {
+            .header-image {
+              max-height: 630px;
+              max-width: 550px;
+            }
+
+            .box {
+              width: 680px;
+              height: 270px;
+            }
+          }
+        }
+
+
+        .about-us {
+          .about-us-flex {
+            .text {
+              font-size: $font-size-small-regular - 0.2;
+            }
+            .line-text {
+              .mid-right {
+                .button-wrapper {
+                  .button {
+                    font-size: $font-size-small-regular - 0.2;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+
+  @media only screen and (max-width:1225px) {
+  .homepage {
+    .header-area {
+      .right {
+        .header-image {
+          max-width: 500;
+          max-height: 520px;
+        }
+
+        .box {
+          max-width: 600px;
+          top: 400px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1170px) {
+  .homepage {
+    .header-area {
+      .left {
+        margin-left: 115px;
+        .text {
+          .header-title {
+            font-size: $font-size-title-home-page - 0.1;
+          }
+
+          .header-about {
+            font-size:  $font-size-medium - 0.5;
+          }
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 480px;
+          max-height: 480px;
+        }
+
+        .box {
+          max-width: 550px;
+          top: 390px;
+        }
+      }
+    }
+
+    .about-us {
+      .width-container {
+        .about-us-flex {
+          .text {
+            max-width: 230px;
+            font-size: $font-size-small-regular - 0.3;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 1050px) {
+  .homepage {
+    .about-us {
+      .about-us-flex {
+        font-size: 16px;
+        flex-wrap: wrap;
+        .line-text {
+          .mid {
+            .mid-left {
+              .text {
+                font-size: $font-size-small-regular - 0.4;
+              }
+            }
+            .mid-right {
+              max-height: 190px;
+            }
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1020px) {
+  .homepage {
+    .header-area {
+      .left {
+        max-height: 470px;
+
+        .lines {
+          .long-line {
+            max-height: 330px;
+          }
+
+        }
+        .text {
+          .header-title {
+            font-size: $font-size-medium;
+          }
+
+          .header-about {
+            font-size: $font-size-giant + 0.4;
+          }
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 420px;
+          max-height: 450px;
+        }
+
+        .box {
+          max-width: 450px;
+          max-height: 240px;
+          top: 330px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:975px) {
+  .homepage {
+    .header-area {
+      .left {
+        max-height: 450px;
+        margin-left: 105px;
+        .lines {
+          .long-line {
+            max-height: 310px;
+            margin-left: 90px;
+          }
+
+        }
+        .text {
+          .header-title {
+            font-size: $font-size-medium - 0.2;
+          }
+
+          .header-about {
+            font-size: $font-size-giant + 0.3;
+          }
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 420px;
+          max-height: 450px;
+        }
+
+        .box {
+          max-width: 450px;
+          max-height: 220px;
+          top: 330px;
+        }
+      }
+    }
+
+    .about-us {
+      .width-container {
+        .title {
+          text-align: center;
+        }
+        .about-us-flex {
+          justify-content: center;
+
+          .text {
+            &:nth-child(2) {
+              margin-left: 60px;
+            }
+          }
+          .line-text {
+            width: 100%;
+            height: 400px;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 30px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:880px) {
+  .homepage {
+    .header-area {
+      .left {
+        max-height: 420px;
+        margin-left: 87px;
+        .lines {
+          .long-line {
+            max-height: 290px;
+            margin-left: 90px;
+          }
+
+        }
+        .text {
+          .header-title {
+            font-size: $font-size-medium - 0.3;
+          }
+
+          .header-about {
+            font-size: $font-size-giant + 0.4;
+          }
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 400px;
+          max-height: 430px;
+        }
+
+        .box {
+          max-width: 400px;
+          max-height: 200px;
+          top: 310px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:820px) {
+  .homepage {
+    .header-area {
+      height: 65vh;
+
+      .left {
+        max-height: 400px;
+        margin-left: 72px;
+
+        .arrow {
+          padding: 7px;
+        }
+
+        .lines {
+          .long-line {
+            max-height: 270px;
+            margin-left: 80px;
+          }
+
+        }
+        .text {
+          .header-title {
+            font-size: $font-size-large + 0.3;
+          }
+
+          .header-about {
+            font-size: $font-size-medium-small + 0.2;
+          }
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 380px;
+          max-height: 410px;
+        }
+
+        .box {
+          max-width: 380px;
+          max-height: 180px;
+          top: 280px;
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:700px) {
+  .homepage {
+    .header-area {
+      .left {
+        max-height: 380px;
+        margin-left: 65px;
+
+        .arrow {
+          padding: 6px;
+        }
+
+        .lines {
+          .long-line {
+            max-height: 250px;
+            margin-left: 70px;
+          }
+
+        }
+        .text {
+          padding-left: 28px;
+        }
+      }
+      .right {
+        .header-image {
+          max-width: 350px;
+          max-height: 380px;
+        }
+      }
+    }
+  }
+}
+
+@include mobile-break {
+  .homepage {
+    .about-us {
+      .width-container {
+        .about-us-flex {
+          justify-content: center;
+          flex-direction: column;
+          align-items: center;
+          text-align: center;
+
+          .text {
+            &:nth-child(2) {
+              margin-left: 0;
+              margin-top: 50px;
+              text-align: center;
+            }
+          }
+          .line-text {
+            width: 100%;
+            height: 400px;
+            justify-content: space-between;
+            align-items: center;
+            margin-top: 30px;
+          }
+        }
+      }
+    }
+  }
+}
+
+@media only screen and (max-width: 550px) {
+  .homepage {
+    .about-us {
+      .width-container {
+        .about-us-flex {
+          .line-text {
+            .mid {
+              flex-direction: column;
+              max-width: 295px;
+
+              .mid-right {
+                align-self: center;
+                height: 100px;
+                margin-top: 15px;
+              }
+            }
+          }
+        }
+      }
     }
   }
 }
