--- a/src/components/common/Header/Header.scss
+++ b/src/components/common/Header/Header.scss
@@ -91,3 +91,95 @@
     }
   }
 }
+
+@media only screen and (max-width:1320px) {
+  .header {
+    .content-wrapper {
+      .nav-item {
+        font-size: $font-size-medium-small - 0.2;
+        padding: 30px 21px;
+
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:1170px) {
+  .header {
+    .content-wrapper {
+      .headerLogo {
+        max-width: 75px;
+        max-height: 75px;
+      }
+      .nav-item {
+        padding: 30px 20px;
+      }
+    }
+  }
+}
+
+
+@media only screen and (max-width:975px) {
+  .header {
+    .content-wrapper {
+      .headerLogo {
+        max-width: 72px;
+        max-height: 72px;
+      }
+      .nav-item {
+        padding: 30px 15px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:975px) {
+  .header {
+    .content-wrapper {
+      .nav-item {
+        padding: 30px 15px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:880px) {
+  .header {
+    .content-wrapper {
+      .nav-item {
+        padding: 30px 13px;
+      }
+    }
+  }
+}
+
+@media only screen and (max-width:820px) {
+  .header {
+    .content-wrapper {
+      .headerLogo {
+        max-width: 52px;
+        max-height: 52px;
+      }
+      .nav-item {
+        font-size: 12px;
+        padding: 30px 12px;
+      }
+    }
+  }
+}
+
+
+    @media only screen and (max-width:700px) {
+      .header {
+        .content-wrapper {
+          .nav-item {
+            font-size: 11px;
+            padding: 30px 9px;
+          }
+        }
+      }
+    }
+
+    @include mobile-break {
+
+    }
